2009-12-09  Larry Ewing  <lewing@novell.com>

	* uielement.cpp: fix call to LayoutInformation::GetCompositeClip.

2009-12-09  Larry Ewing  <lewing@novell.com>

	* media.cpp (Image::Render): 
	* mediaelement.cpp (MediaElement::Render): disable the extend_pad
	logic it makes things much slower and causes complete failures in
	some cases.

2009-12-09  Larry Ewing  <lewing@novell.com>

	* layoutinformation.h:
	* layoutinformation.cpp:
	* frameworkelement.cpp: reinstate the breaking out of the layout
	clip in certain cases.  

	Fixes http://www.imagebot.org/silverlight/postcards/

2009-12-09  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (OnPropertyChanged): Don't forward TextBox's
	width/height values on to TextBoxView.
	(OnApplyTemplate): Same.

2009-12-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: SetParent[Safe]: we may have destroyed handlers
	on the parent even if SetParent is called - SetParentSafe might have
	been called the last time to set the parent, so move the RemoveHandler
	call from SetParentSafe to SetParent.

2009-12-08  Chris Toshok  <toshok@ximian.com>

	* keyboard.cpp (Keyboard::MapGdkToVKey): new method, map gdk
	keyvals to windows platform keycodes.
	(Keyboard::MapKeyValToKey): fix up this mapping a bit.  turns out
	platformkeycode isn't the only wart in silverlight's input
	handling.  ugh, they suck.

	* runtime.h|cpp: add RUNTIME_INIT_EMULATE_KEYCODES.

	* eventargs.cpp (KeyEventArgs::GetPlatformKeyCode): call
	Keyboard::MapGdkToVKey if RUNTIME_INIT_EMULATE_KEYCODES is set.
	
2009-12-08  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::KeyPressDown): Ignore the
	AcceptsReturn state - it doesn't matter if we are accepting
	returns or not, if there are multiple lines already, we still need
	to be able to navigate up/down.
	(TextBoxBase::KeyPressUp): Same.

2009-12-08  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.h|cpp (class EventObject): add
	FindHandlerToken.
